# bookstore

./: Makefile  docker-compose.yml  pyproject.toml
bookstore/books/: admin.py  models.py  serializers.py  urls.py  views.py
bookstore/books/migrations/: 0001_initial.py  0002_alter_author_options_alter_book_options_and_more.py  0003_alter_order_description.py  0004_alter_сontent_order_options.py  0005_alter_order_step_date_step_beg_and_more.py  0006_order_step_unique_element.py
bookstore/bookstore/: settings.py  urls.py
