[tool.poetry]
name = "bookstore"
version = "1"
description = "This is a simple learning project that implements the basic APIs for the bookstore"
authors = ["vlad"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
